--- a/degree_checklist/templates/base.html
+++ b/degree_checklist/templates/base.html
@@ -40,6 +40,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'courseenrollment-list' %}">Course Enrollments</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'semester-list' %}">Semester</a>
+                </li>
             </ul>
         </div>
     </nav>
