--- a/templates/base.html
+++ b/templates/base.html
@@ -1,20 +1,18 @@
-{% load static %} <!-- Load the static files tag library -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>{% block title %}Degree Checklist{% endblock %}</title>
-    
+    <title>{% block title %}Django App{% endblock %}</title>
+    <!-- Load static CSS file -->
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
     <!-- Bootstrap CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="{% static 'css/custom1.css' %}">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: maroon;">
-        <a class="navbar-brand" href="{% url 'home' %}">Degree Checklist App</a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="{% url 'home' %}">My Django App</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-label="Toggle navigation" aria-expanded="false">
             <span class="navbar-toggler-icon"></span>
@@ -56,23 +54,11 @@
             </ul>
         </div>
     </nav>
-
-    <!-- Main Container -->
-    <div class="container mt-4">
-        <div class="card">
-            <div class="card-body">
-                {% block content %}
-                <!-- Dynamic content goes here -->
-                {% endblock %}
-            </div>
-        </div>
+    <div class="container">
+        {% block content %}
+        {% endblock %}
     </div>
-    
-
-    <footer class="footer text-center py-4">
-        <p>&copy; 2023 Degree Checklist Project. All Rights Reserved.</p>
-    </footer>
-
+    <!-- jQuery and Bootstrap Bundle (includes Popper) -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
     <!-- Custom JavaScript -->
